<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/brand_white"
    android:padding="@dimen/spacing_32dp"
    tools:context=".equipment.presentation.create.CreateEquipmentFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/brand_black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textColor="@color/brand_green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etManufacturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16dp"
        android:hint="@string/manufacturer"
        app:layout_constraintTop_toBottomOf="@id/tvCancel" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16dp"
        android:hint="@string/model"
        app:layout_constraintTop_toBottomOf="@id/etManufacturer" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLicensePlate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16dp"
        android:hint="@string/license_plate"
        app:layout_constraintTop_toBottomOf="@id/etModel" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etOwner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16dp"
        android:hint="@string/owner"
        app:layout_constraintTop_toBottomOf="@id/etLicensePlate" />

</androidx.constraintlayout.widget.ConstraintLayout>