<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/brand_white"
    android:padding="@dimen/spacing_32dp"
    tools:context=".employees.presentation.details.edit.EditWorkDayFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/brand_black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textColor="@color/brand_green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etHoursWorked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/hours"
        app:layout_constraintBottom_toBottomOf="@id/switchOperator"
        app:layout_constraintEnd_toStartOf="@id/switchOperator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/switchOperator" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchOperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16dp"
        android:checked="true"
        android:text="@string/exclusive_shift"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etHoursWorked"
        app:layout_constraintTop_toBottomOf="@id/tvCancel"
        app:switchPadding="8dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16dp"
        android:hint="@string/notes"
        app:layout_constraintTop_toBottomOf="@id/switchOperator" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEquipmentUsage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/spacing_16dp"
        app:layout_constraintTop_toBottomOf="@id/etNotes" />

</androidx.constraintlayout.widget.ConstraintLayout>